--- a/style.css
+++ b/style.css
@@ -32,8 +32,10 @@ html {
 
  .head-title {
   background-color: rgb(0, 0, 139, .3);
-  
-  padding: 1em;
+  padding-left: 3em;
+  padding-bottom: 5em;
+  padding-top: 1em;
+  border-bottom: 1px solid aquamarine;
  }
 
  h1 {
@@ -41,6 +43,14 @@ html {
  }
 
  h2 {
+  font-family: 'q';
+ }
+
+ h3 {
+  font-family: 'q';
+ }
+
+ h4 {
   font-family: 'q';
  }
 
@@ -66,7 +76,8 @@ html {
  }
 
  .skills {
-  padding: 1em;
+  padding-left: 3em;
+  padding-top: 1em;
   display: flex;
   flex-direction: column;
   background-color: rgb(0, 255, 0, .3);
@@ -82,19 +93,26 @@ html {
  }
 
  .projects {
+  padding-left: 3em;
   display: flex;
   flex-direction: column;
   background-color: rgb(0, 255, 0, .3);
   /* border: solid 1px darkblue; */
-  padding: 1em;
+  padding-top: 1em;
  }
 
  .work {
-  padding: 1em;
+  padding-left: 3em;
+  padding-top: 1em;
   display: flex;
   flex-direction: column;
   background-color: rgb(0, 0, 139, .3);
   /* border: 1px solid aquamarine; */
   height: 100%;
+  border-top: 1px solid aquamarine;
+ }
+
+ li {
+  border-bottom: 1px solid rgb(127, 255, 212, .3);
  }
 
