--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ html {
   display: flex;
   flex-direction: column;
   border-right: 1px solid aquamarine;
-  width: 35vw;
+  width: 40vw;
   height: 100%;
  }
 
@@ -36,6 +36,32 @@ html {
   padding-bottom: 5em;
   padding-top: 1em;
   border-bottom: 1px solid aquamarine;
+ }
+
+ .info-box {
+  display: flex;
+  align-items: center;
+ }
+
+ .icon {
+  height: 2em;
+  width: 2em;
+  margin: 1em;
+ }
+
+ #email {
+  background-image: url('./email.svg');
+  background-size: cover;
+ }
+
+ #phone {
+  background-image: url('./phone.svg');
+  background-size: cover;
+ }
+
+ #location {
+  background-image: url('./location.svg');
+  background-size: cover;
  }
 
  h1 {
@@ -56,12 +82,12 @@ html {
 
  .head-title > h1 {
   margin-bottom: none;
-  font-size: xx-large;
+  font-size: 300%;
  }
 
  .head-title > p {
   margin-top: none;
-  transform: translateY(-60%);
+  transform: translateY(-200%);
   color: orange;
  }
 
@@ -80,13 +106,13 @@ html {
   padding-top: 1em;
   display: flex;
   flex-direction: column;
-  background-color: rgb(0, 255, 0, .3);
+  background-color: rgba(0, 100, 0, 0.3);
   /* border: solid 1px darkblue; */
   height: 100%;
  }
 
  .main {
-  width: 55vw;
+  width: 60vw;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -96,7 +122,7 @@ html {
   padding-left: 3em;
   display: flex;
   flex-direction: column;
-  background-color: rgb(0, 255, 0, .3);
+  background-color:  rgba(0, 100, 0, 0.3);
   /* border: solid 1px darkblue; */
   padding-top: 1em;
  }
