--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html {
  main {
   display: flex;
   justify-content: center;
-  /* background-color:black; */
+  background-color:black;
  }
 
  aside {
@@ -32,8 +32,8 @@ html {
 
  .head-title {
   background-color: rgb(0, 0, 139, .3);
-  padding-left: 3em;
-  padding-bottom: 5em;
+  padding-left: 2em;
+  padding-bottom: 3em;
   padding-top: 1em;
   border-bottom: 1px solid aquamarine;
  }
@@ -46,7 +46,9 @@ html {
  .icon {
   height: 2em;
   width: 2em;
-  margin: .6em;
+  margin-right: .6em;
+  margin-bottom: .6em;
+  margin-left: -.6em;
  }
 
  #email {
