--- a/style.css
+++ b/style.css
@@ -19,23 +19,23 @@ html {
  main {
   display: flex;
   justify-content: center;
-  background-color:black;
+  /* background-color:black; */
+  height: 95vh;
  }
 
  aside {
   display: flex;
   flex-direction: column;
-  border-right: 1px solid aquamarine;
   width: 40vw;
-  height: 100%;
  }
 
  .head-title {
   background-color: rgb(0, 0, 139, .3);
-  padding-left: 2em;
   padding-bottom: 3em;
+  padding-left: .5em;
   padding-top: 1em;
   border-bottom: 1px solid aquamarine;
+  border-right: 1px solid aquamarine;
  }
 
  .info-box {
@@ -44,11 +44,10 @@ html {
  }
 
  .icon {
-  height: 2em;
-  width: 2em;
+  height: 1.6em;
+  width: 1.6em;
   margin-right: .6em;
   margin-bottom: .6em;
-  margin-left: -.6em;
  }
 
  #email {
@@ -114,8 +113,8 @@ html {
   display: flex;
   flex-direction: column;
   background-color: rgba(0, 100, 0, 0.3);
-  /* border: solid 1px darkblue; */
   height: 100%;
+  border-right: 1px solid aquamarine;
  }
 
  .main {
