--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ html {
   -webkit-print-color-adjust: exact;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
-  background: radial-gradient(at top left, rgb(50, 50, 50), blue);
+  /* background: radial-gradient(at top left, rgb(50, 50, 50), blue); */
+  background-color:black;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -19,7 +20,6 @@ html {
  main {
   display: flex;
   justify-content: center;
-  background-color:black;
   height: 95vh;
  }
 
