--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ html {
  .work {
   padding-left: 3em;
   padding-top: 1em;
+  padding-bottom: 5em;
   display: flex;
   flex-direction: column;
   background-color: rgb(0, 0, 139, .3);
