--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@ html {
   -webkit-print-color-adjust: exact;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
-  /* background: radial-gradient(at top left, rgb(50, 50, 50), blue); */
-  
+  background: radial-gradient(at top left, rgb(50, 50, 50), blue);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -20,7 +19,7 @@ html {
  main {
   display: flex;
   justify-content: center;
-  background-color:black;
+  /* background-color:black; */
   height: 120vh;
  }
 
