--- a/style.css
+++ b/style.css
@@ -21,12 +21,25 @@ html {
   justify-content: center;
   /* background-color:black; */
   height: 120vh;
+  /* flex-wrap: wrap; */
+ }
+
+ @media (max-width: 600px) {
+  main {
+    flex-wrap: wrap;
+  }
  }
 
  aside {
   display: flex;
   flex-direction: column;
   width: 40vw;
+ }
+
+ @media (max-width: 600px) {
+  aside {
+    width: 100vw;
+  }
  }
 
  .head-title {
@@ -123,6 +136,12 @@ html {
   display: flex;
   flex-direction: column;
   height: 100%;
+ }
+
+ @media (max-width: 600px) {
+  .main {
+    width: 100vw;
+  }
  }
 
  .projects {
