--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
   -webkit-print-color-adjust: exact;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
-  background: radial-gradient(at top left, rgb(50, 50, 50), blue);
+  /* background: radial-gradient(at top left, rgb(50, 50, 50), blue); */
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -20,8 +20,12 @@ html {
   display: flex;
   justify-content: center;
   /* background-color:black; */
-  height: 120vh;
+  height: 140vh;
   /* flex-wrap: wrap; */
+  background: radial-gradient(at top left, rgb(50, 50, 50), blue);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
  }
 
  @media (max-width: 600px) {
@@ -123,7 +127,7 @@ html {
  .skills {
   padding-left: 3em;
   padding-top: 1em;
-  padding-bottom: 10em;
+  padding-bottom: 5em;
   display: flex;
   flex-direction: column;
   background-color: rgba(0, 100, 0, 0.3);
