--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ html {
   height: 140vh;
   /* flex-wrap: wrap; */
   background: radial-gradient(at top left, rgb(50, 50, 50), blue);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+  /* background-repeat: no-repeat; */
+  /* background-size: cover; */
+  /* background-attachment: fixed; */
  }
 
  @media (max-width: 600px) {
