--- a/style.css
+++ b/style.css
@@ -10,10 +10,15 @@ html {
   -webkit-print-color-adjust: exact;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
-  /* background: radial-gradient(at top left, rgb(50, 50, 50), blue); */
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+ }
+
+ @media (max-width: 600px) {
+  html {
+    background: radial-gradient(at top left, rgb(50, 50, 50), blue);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+  }
  }
 
  main {
