--- a/style_2.css
+++ b/style_2.css
@@ -65,8 +65,7 @@ html {
  .icon {
   height: 1.6em;
   width: 1.6em;
-  margin-right: .6em;
-  margin-bottom: .6em;
+  margin: .3em;
  }
 
  #email {
@@ -187,4 +186,13 @@ html {
 
  li {
   border-bottom: 1px solid rgb(128, 128, 128, .5);
+ }
+
+ footer {
+  display: flex;
+
+ }
+
+ .education {
+  width: 50%;
  }
