--- a/style_2.css
+++ b/style_2.css
@@ -123,16 +123,21 @@ html {
   display: flex;
   flex-direction: column;
   border-bottom: solid 1px grey;
+  width: 100%;
  }
 
  .project-box {
   display: flex;
+  width: 100%;
   
  }
 
+ .list-box {
+  display: flex;
+  width: 100%;
+ }
+
  .project {
-  margin-right: 1em;
-  width: 50%;
  }
 
  .work {
@@ -153,6 +158,7 @@ html {
 
  li {
   border-bottom: 1px solid rgb(128, 128, 128, .5);
+  width: 100%;
  }
 
  footer {
